--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
         <!-- HEADER AND TODO COUNT -->
         <div class="jumbotron text-center">
-            <h1>Paul's Todo-aholic <span class="label label-info">{{ todos.length }}</span></h1>
+            <h1>Paul's Todo-List <span class="label label-info">{{ todos.length }}</span></h1>
         </div>
 
         <!-- TODO LIST -->
